Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/Batch_header__c.object-meta.xml
<CustomObject>
    <label>Batch Header</label>
    <nameField>
        <displayFormat>Batch-{00000}</displayFormat>
        <label>Batch header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>