Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/Batch_check__c.field-meta.xml
<CustomField>
    <fullName>Batch_check__c</fullName>
    <label>Batch check</label>
    <length>10</length>
    <type>Text</type>
</CustomField>