Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <formula>Uploaded_File_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Uploaded File Name</inlineHelpText>
    <label>File Name</label>
    <type>Text</type>
</CustomField>