Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_AccountID__c.field-meta.xml
<CustomField>
    <fullName>IP_AccountID__c</fullName>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>