Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_BatchTitle__c.field-meta.xml
<CustomField>
    <fullName>IP_BatchTitle__c</fullName>
    <externalId>true</externalId>
    <label>Batch Title</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>