Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_BatchType__c.field-meta.xml
<CustomField>
    <fullName>IP_BatchType__c</fullName>
    <label>Batch type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>