Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_CountOfBatchLines__c.field-meta.xml
<CustomField>
    <fullName>IP_CountOfBatchLines__c</fullName>
    <label>Count Of Batch Lines</label>
    <summaryForeignKey>IP_BatchLine__c.IP_BatchHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>