Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_ExternalBatchID__c.field-meta.xml
<CustomField>
    <fullName>IP_ExternalBatchID__c</fullName>
    <label>External Batch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>