Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/IP_State__c.field-meta.xml
<CustomField>
    <fullName>IP_State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>