Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/fields/Uploaded_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_Name__c</fullName>
    <label>Uploaded File Name</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>