Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>IP_Account__c</columns>
    <columns>File_Name__c</columns>
    <columns>IP_BatchTitle__c</columns>
    <columns>IP_BatchType__c</columns>
    <columns>IP_Status__c</columns>
    <columns>IP_State__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>IP_CountOfBatchLines__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>