Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/listViews/Capita.listView-meta.xml
<ListView>
    <fullName>Capita</fullName>
    <columns>NAME</columns>
    <columns>IP_CountOfBatchLines__c</columns>
    <columns>IP_BatchType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_BatchTitle__c</columns>
    <columns>IP_State__c</columns>
    <columns>IP_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_BatchType__c</field>
        <operation>equals</operation>
        <value>Capita</value>
    </filters>
    <label>Capita</label>
    <language>en_US</language>
</ListView>