Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/listViews/Ikea.listView-meta.xml
<ListView>
    <fullName>Ikea</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Status__c</columns>
    <columns>IP_State__c</columns>
    <columns>IP_CountOfBatchLines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_BatchType__c</field>
        <operation>contains</operation>
        <value>Ikea</value>
    </filters>
    <label>Ikea</label>
    <language>en_US</language>
</ListView>