Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/listViews/P45_Batch.listView-meta.xml
<ListView>
    <fullName>P45_Batch</fullName>
    <columns>NAME</columns>
    <columns>IP_BatchTitle__c</columns>
    <columns>IP_BatchType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IP_State__c</columns>
    <columns>IP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a4a4J000000tlNv</value>
    </filters>
    <label>P45 Batch</label>
</ListView>