Frankbelford/uatv1ba/force-app/main/default/objects/Batch_header__c/listViews/Shop_Direct.listView-meta.xml
<ListView>
    <fullName>Shop_Direct</fullName>
    <columns>NAME</columns>
    <columns>IP_BatchType__c</columns>
    <columns>IP_State__c</columns>
    <columns>IP_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_BatchType__c</field>
        <operation>startsWith</operation>
        <value>Shop Direct</value>
    </filters>
    <label>Shop Direct</label>
    <language>en_US</language>
</ListView>